# watchpost

./: .dockerignore  .gitignore  Cargo.toml  DESIGN.md  Dockerfile  LICENSE  README.md  SKILL.md  STATUS.md  docker-compose.yml
.github/workflows/: ci.yml
frontend/: index.html
frontend/src/: App.jsx  Icons.jsx  api.js  index.css  main.jsx
frontend/src/pages/: BulkImport.jsx  CreateMonitor.jsx  Dashboard.jsx  Locations.jsx  MonitorDetail.jsx  StatusPage.jsx  StatusPages.jsx
sdk/python/: README.md  pyproject.toml  test_sdk.py  watchpost.py
src/: auth.rs  catchers.rs  checker.rs  consensus.rs  db.rs  lib.rs  main.rs  models.rs  notifications.rs  routes.rs  sse.rs
src/routes/: alerts.rs  badges.rs  dashboard_route.rs  dependencies.rs  heartbeats.rs  incidents.rs  locations.rs  maintenance.rs  mod.rs  monitors.rs  notifications.rs  settings.rs  sla.rs  status.rs  status_pages.rs  stream.rs  system.rs  tags.rs  uptime.rs  webhook_deliveries.rs
static/: llms.txt  openapi.json
tests/: api_tests.rs
