[package]
name = "watchpost"
version = "0.1.0"
edition = "2021"
description = "Agent-native monitoring service"
license = "MIT"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
rocket_cors = "0.6"
lettre = { version = "0.11", default-features = false, features = ["builder", "hostname", "smtp-transport", "tokio1-rustls-tls"] }
trust-dns-resolver = { version = "0.23", default-features = false, features = ["tokio-runtime"] }

[dev-dependencies]
rocket = { version = "0.5", features = ["json"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
