[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "watchpost"
version = "0.1.0"
description = "Python SDK for Watchpost — agent-native uptime monitoring"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{name = "Humans Not Required"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: System :: Monitoring",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/Humans-Not-Required/watchpost"
Repository = "https://github.com/Humans-Not-Required/watchpost"
Documentation = "https://github.com/Humans-Not-Required/watchpost/tree/main/sdk/python"

[tool.setuptools]
py-modules = ["watchpost"]
